--- a/swipeback/build.gradle
+++ b/swipeback/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.0'
 
     defaultConfig {
         minSdkVersion 19
@@ -22,5 +22,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:appcompat-v7:26.+'
 }
