--- a/swipeback/build.gradle
+++ b/swipeback/build.gradle
@@ -22,5 +22,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
