--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support:support-vector-drawable:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation project(':swipeback')
+    implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
